2005-03-27  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (on_recent_file_activate):
	* src/totem-private.h:
	* src/totem-session.c: move the totem_signal_(un)block_by_data helpers
	to totem-private.h, prevent double-open when activating files from
	the recent-files menu

2005-03-27  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade:
	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_int),
	(bacon_video_widget_get_metadata):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_metadata_int),
	(bacon_video_widget_get_metadata):
	* src/backend/bacon-video-widget.h:
	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_reset),
	(bacon_video_widget_properties_set_from_current):
	* src/metadata-test.c: (on_got_metadata_event), (main):

	Add the Video bitrate property (Closes: #166780)

2005-03-27  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-03-25  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_finalize), (bacon_video_widget_get_property),
	(bacon_video_widget_set_media_device): don't read the media device
	configuration from the xine configuration file

2005-03-25  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_set_property),
	(bacon_video_widget_get_property): add get/set property implementation
	to allow eject to work with the GStreamer backend
	* src/backend/bacon-video-widget-xine.c: (xine_error),
	(bacon_video_widget_set_property),
	(bacon_video_widget_get_property): remove unneeded debug, and fix
	setting the mediadev property because of a missing break;

2005-03-24  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem-stock-icons.c: (totem_set_default_icons),
	(totem_named_icons_init): use the new "Leave fullscreen" stock icon
	and label
	* src/totem.c: (on_mouse_click_fullscreen),