@@ -47,6 +47,7 @@ typedef enum {
 	TOTEM_REMOTE_COMMAND_UNKNOWN,
 	TOTEM_REMOTE_COMMAND_PLAY,
 	TOTEM_REMOTE_COMMAND_PAUSE,
+	TOTEM_REMOTE_COMMAND_PLAYPAUSE,
 	TOTEM_REMOTE_COMMAND_NEXT,
 	TOTEM_REMOTE_COMMAND_PREVIOUS,
 	TOTEM_REMOTE_COMMAND_SEEK_FORWARD,
